# waze-traffic-api

./: README.md  pyproject.toml  requirements.txt  waze.ipynb  waze.py
notebooks/: examples.ipynb  waze.ipynb
waze/: __init__.py  cfg.py  logger.py  models.py  utils.py  waze.py
